--- a/simulation/r27mkyusyu.html
+++ b/simulation/r27mkyusyu.html
@@ -7,55 +7,63 @@
 
   <title>令和2年九州豪雨を可視化しました。</title>
 
-  <!-— facebook open graph tags -->
-    <meta property="og:url" content="https://dpnote.netlify.app/simulation/r27mkyusyu.html">
-    <meta property="og:title" content="令和2年九州豪雨を可視化しました。" />
-    <meta property="og:description" content="令和2年九州豪雨を可視化しました。" />
-    <meta property="og:image" content="https://dpnote.netlify.app/simulation/r27mkyusyu.png" />
-    <meta property="og:image:type" content="image/png" />
+  <meta property="og:url" content="https://dpnote.netlify.app/simulation/r27mkyusyu.html">
+  <meta property="og:title" content="令和2年九州豪雨を可視化しました。" />
+  <meta property="og:description" content="令和2年九州豪雨を可視化しました。" />
+  <meta property="og:image" content="https://dpnote.netlify.app/simulation/r27mkyusyu.png" />
+  <meta property="og:image:type" content="image/png" />
 
-    <!-— twitter card tags -->
-      <meta name="twitter:card" content="summary_large_image">
-      <meta name="twitter:title" content="令和2年九州豪雨を可視化しました。">
-      <meta name="twitter:description" content="令和2年九州豪雨を可視化しました。">
-      <meta name="twitter:image" content="https://dpnote.netlify.app/simulation/r27mkyusyu.png" />
-      <script src="https://unpkg.com/deck.gl@^8.0.0/dist.min.js"></script>
-      <style>
-        html,
-        body {
-          padding: 0;
-          margin: 0;
-          width: 100%;
-          height: 100%;
-        }
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="令和2年九州豪雨を可視化しました。">
+  <meta name="twitter:description" content="令和2年九州豪雨を可視化しました。">
+  <meta name="twitter:image" content="https://dpnote.netlify.app/simulation/r27mkyusyu.png" />
+  <script src="https://unpkg.com/deck.gl@^8.0.0/dist.min.js"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
-        .deck-tooltip {
-          font-family: Helvetica, Arial, sans-serif;
-          padding: 8px !important;
-          color: #fff !important;
-          background: #192f60 !important;
-          max-width: 110px;
-          font-size: .8em;
-          opacity: 0.8;
-        }
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'UA-202486341-1');
+  </script>
+  <style>
+    html,
+    body {
+      padding: 0;
+      margin: 0;
+      width: 100%;
+      height: 100%;
+    }
 
-        .attribution {
-          position: absolute;
-          bottom: 0;
-          right: 0;
-          z-index: 9;
-          padding: 2px 4px;
-          background-color: rgba(255, 255, 255, 0.5);
-          font-size: 11px;
-          pointer-events: auto;
-        }
-      </style>
+    .deck-tooltip {
+      font-family: Helvetica, Arial, sans-serif;
+      padding: 8px !important;
+      color: #fff !important;
+      background: #192f60 !important;
+      max-width: 110px;
+      font-size: .8em;
+      opacity: 0.8;
+    }
+
+    .attribution {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      z-index: 9;
+      padding: 2px 4px;
+      background-color: rgba(255, 255, 255, 0.5);
+      font-size: 11px;
+      pointer-events: auto;
+    }
+  </style>
 </head>
 
 <body>
 
   <div class="attribution">
-    © <a href="http://www.openstreetmap.org/about/" target="_blank" rel="noopener noreferrer">OpenStreetMap</a> contributors、<a href="https://www.data.jma.go.jp/obd/stats/etrn/" target="_blank">気象データ</a>、気象庁：<a href="https://creativecommons.org/licenses/by/4.0/deed.ja" target="_blank">CC BY 4.0</a>
+    © <a href="http://www.openstreetmap.org/about/" target="_blank" rel="noopener noreferrer">OpenStreetMap</a> contributors、<a href="https://www.data.jma.go.jp/obd/stats/etrn/" target="_blank">気象データ</a>、気象庁：<a
+      href="https://creativecommons.org/licenses/by/4.0/deed.ja" target="_blank">CC BY 4.0</a>
   </div>
 
 </body>
