--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <div class="excerpt">
     <div class="excerpt_header">
       <h3 class="post_link">
-        <a href="https://dpnote.netlify.app/post/3dmap/" title="3Dマップを作ってみた。">3Dマップを作ってみた。</a>
+        <a href="https://dpnote.netlify.app/post/3dmap/" title="都市空間の3Dマップを作りました。">都市空間の3Dマップを作りました。</a>
       </h3>
       
   <div class="post_meta">
@@ -99,7 +99,7 @@
     </div>
     <div class="excerpt_footer partition">
       <div class="kai_thumbnail">
-        <img src='https://dpnote.netlify.app/maptest/3dhazard/3dbuilding.jpg' alt="3Dマップを作ってみた。">
+        <img src='https://dpnote.netlify.app/maptest/3dhazard/3dbuilding.jpg' alt="都市空間の3Dマップを作りました。">
       </div>
       
         <div>
