--- a/search/index.html
+++ b/search/index.html
@@ -254,6 +254,8 @@
         </a>
 
         <br>
+        <img src="../images/qr_dpnote.png">
+        <br>
         <i class="fa fa-copyright" aria-hidden="true"></i> <a href="https://hitoshi2s.netlify.app/index.html" target="_blank" class="footer_link">仁志</a>. By <a href="https://gohugo.io/" target="_blank" class="footer_link">hugo</a>
       </center>
     </div>
