--- a/404.html
+++ b/404.html
@@ -89,7 +89,8 @@
   <center>
     
     <a href="https://twitter.com/hitoshi2sl" target="_blank"><div class="circle1"><i class="fab fa-twitter"></i></div></a><a href="https://github.com/linkevery2s" target="_blank"><div class="circle2"><i class="fab fa-github"></i></div></a><a href="https://docs.google.com/forms/d/e/1FAIpQLSf-WMoBJRTdA1bmN_SmQ-bsNGeLs1l737d3c9BUNuErjH-KBw/viewform" target="_blank"><div class="circle4"><i class="far fa-envelope"></i></div></a><a href="https://dpnote.netlify.app/index.xml" target="_blank"><div class="circle3"><i class="fas fa-rss-square"></i></div></a>
-
+    <br>
+    <img src="images/qr_dpnote.png">
     <br>
     <i class="fa fa-copyright" aria-hidden="true"></i> <a href="https://hitoshi2s.netlify.app/index.html" target="_blank" class="footer_link">仁志</a>. By <a href="https://gohugo.io/" target="_blank" class="footer_link">hugo</a>
     </center>
