--- a/simulation/hojoki/index.html
+++ b/simulation/hojoki/index.html
@@ -14,11 +14,11 @@
 	<meta property="og:title" content="方丈記" />
 	<meta property="og:type" content="website" />
 	<meta property="og:image" content="https://dpnote.netlify.app/images/hojoki.png" />
-	<meta property="og:description" content="方丈記の世界観を未読するため、文献を参考に可視化しました。" />
+	<meta property="og:description" content="方丈記の世界観を味読するため、文献を参考に可視化しました。" />
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="方丈記" />
 	<meta name="twitter:image" content="https://dpnote.netlify.app/images/hojoki.png" />
-	<meta name="twitter:description" content="方丈記の世界観を未読するため、文献を参考に可視化しました。" />
+	<meta name="twitter:description" content="方丈記の世界観を味読するため、文献を参考に可視化しました。" />
 	<meta name="author" content="仁志">
 	<meta name="keywords" content="方丈記,災害,防災,鴨長明" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -35,7 +35,7 @@
 		<!-- Header -->
 		<header id="header">
 			<h1>方丈記</h1>
-			<p>方丈記の世界観を未読するため、文献を参考に可視化しました。</p>
+			<p>方丈記の世界観を味読するため、文献を参考に可視化しました。</p>
 
 		</header>
 
