--- a/simulation/kumamoto3d/index.html
+++ b/simulation/kumamoto3d/index.html
@@ -14,7 +14,12 @@
 <meta name="twitter:description" content="熊本地震を立体的に捉えるため、深さの次元も入れて、３Dにて可視化しました。" />
 <meta name="author" content="仁志">
 <meta name="keywords" content="熊本地震,可視化"/>
-
+<style>
+html,body,#myDiv{
+  padding: 0;
+  margin: 0;
+}
+</style>
 
 	<script src='https://cdn.plot.ly/plotly-2.18.0.min.js'></script>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js'></script>
