--- a/simulation/kumamoto3d/index.html
+++ b/simulation/kumamoto3d/index.html
@@ -34,9 +34,9 @@
 </head>
 
 <body>
- <div id="myDiv"><!-- ここにプロットさせる --></div>
+   <div id="myDiv"><!-- ここにプロットさせる --></div>
 
- <center>
+   <center>
     <div id="shindo_legend"></div>
 </center>
 
@@ -75,16 +75,16 @@
             type: "groupby",
             groups: d,
             styles: [
-             {target: "震度７", value: {marker: {color: "rgba(100,1,37,1)", size: 10}}},
-             {target: "震度６強", value: {marker: {color: "rgba(226,4,27,1)", size: 9}}},
-             {target: "震度６弱", value: {marker: {color: "rgba(236,109,81,1)", size: 8}}},
-             {target: "震度５強", value: {marker: {color: "rgba(214,106,53,1)", size: 7}}},
-             {target: "震度５弱", value: {marker: {color: "rgba(219,132,73,1)", size: 6}}},
-             {target: "震度４", value: {marker: {color: "rgba(255,234,0,1)", size: 5}}},
-             {target: "震度３", value: {marker: {color: "rgba(195,216,37,1)", size: 4}}},
-             {target: "震度２", value: {marker: {color: "rgba(89,185,198,1)", size: 3}}},
-             {target: "震度１", value: {marker: {color: "rgba(0,123,187,1)", size: 2}}},
-             ]
+               {target: "震度７", value: {marker: {color: "rgba(100,1,37,1)", size: 10}}},
+               {target: "震度６強", value: {marker: {color: "rgba(226,4,27,1)", size: 9}}},
+               {target: "震度６弱", value: {marker: {color: "rgba(236,109,81,1)", size: 8}}},
+               {target: "震度５強", value: {marker: {color: "rgba(214,106,53,1)", size: 7}}},
+               {target: "震度５弱", value: {marker: {color: "rgba(219,132,73,1)", size: 6}}},
+               {target: "震度４", value: {marker: {color: "rgba(255,234,0,1)", size: 5}}},
+               {target: "震度３", value: {marker: {color: "rgba(195,216,37,1)", size: 4}}},
+               {target: "震度２", value: {marker: {color: "rgba(89,185,198,1)", size: 3}}},
+               {target: "震度１", value: {marker: {color: "rgba(0,123,187,1)", size: 2}}},
+               ]
         }]
     };
 
@@ -162,8 +162,14 @@ let layout = {
             title: "深さ"
         }
     },
-    title: "熊本地震を3Dにて深さまで可視化",
-    showlegend: false,
+    margin: {
+        l: 10,
+        r: 10,
+        b: 10,
+        t: 10,
+        pad: 10
+    },
+    showlegend: false
 
 };
 
