--- a/simulation/kumamoto3d/index.html
+++ b/simulation/kumamoto3d/index.html
@@ -13,7 +13,7 @@
     <meta name="twitter:image" content="ogp.png" />
     <meta name="twitter:description" content="熊本地震を立体的に捉えるため、深さの次元も入れて、３Dにて可視化しました。" />
     <meta name="author" content="仁志">
-    <meta name="keywords" content="熊本地震,可視化"/>
+    <meta name="keywords" content="熊本地震, 3D, 可視化"/>
     <style>
         html,body,#myDiv{
           padding: 0;
