--- a/simulation/kumamoto3d/index.html
+++ b/simulation/kumamoto3d/index.html
@@ -49,6 +49,8 @@
         const res = await fetch("./all.json");
         const shindo = await res.json();
 
+        console.log(shindo);
+
         let a = new Array();
         let b = new Array();
         let c = new Array();
