--- a/denshouhi/index.html
+++ b/denshouhi/index.html
@@ -328,7 +328,7 @@
     <br>
     <img src="https://dpnote.netlify.app/images/qr_dpnote.png">
     <br>
-    <i class="fa fa-copyright" aria-hidden="true"></i> <a href="https://hitoshi2s.netlify.app/index.html" target="_blank" class="footer_link">仁志</a>. By <a href="https://gohugo.io/" target="_blank" class="footer_link">hugo</a>
+    <i class="fa fa-copyright" aria-hidden="true"></i> <a href="https://hitoshi2s.netlify.app/index.html" target="_blank" class="footer_link">仁志</a>. By <a href="https://gohugo.io/" target="_blank" class="footer_link">hugo</a> themes <a href="https://themes.gohugo.io/themes/hugo-clarity/"  target="_blank" class="footer_link">Clarity</a>
     </center>
   </div>
 </footer>
