--- a/3dmap/index.html
+++ b/3dmap/index.html
@@ -227,7 +227,7 @@
   <div class="related">
     
       <div class="item1"><a href="/tkriver/">
-              <img src='https://dpnote.netlify.app/images/tkriver.png'>
+              <img src='https://dpnote.netlify.app/images/post/tkriver.png'>
           </a>
 
         <a href="/tkriver/">東京都河川ライブカメラマップの作成</a>
