--- a/bias/index.html
+++ b/bias/index.html
@@ -226,7 +226,7 @@
   <div class="related">
     
       <div class="item1"><a href="/hojoki/">
-              <img src='https://dpnote.netlify.app/images/hojoki.png'>
+              <img src='https://dpnote.netlify.app/images/post/hojoki.png'>
           </a>
 
         <a href="/hojoki/">方丈記の世界観を可視化しました。</a>
