--- a/furniture/index.html
+++ b/furniture/index.html
@@ -246,7 +246,7 @@
       </div>
     
       <div class="item1"><a href="/kumamotoearthquake/">
-              <img src='https://dpnote.netlify.app/images/kumamoto1.png'>
+              <img src='https://dpnote.netlify.app/images/post/kumamoto1.png'>
           </a>
 
         <a href="/kumamotoearthquake/">熊本地震「活断層図と震度マップの重ね合わせ」</a>
