--- a/00000japan/index.html
+++ b/00000japan/index.html
@@ -234,7 +234,7 @@
       </div>
     
       <div class="item1"><a href="/tkriver/">
-              <img src='https://dpnote.netlify.app/images/tkriver.png'>
+              <img src='https://dpnote.netlify.app/images/post/tkriver.png'>
           </a>
 
         <a href="/tkriver/">東京都河川ライブカメラマップの作成</a>
