--- a/blackice/index.html
+++ b/blackice/index.html
@@ -227,7 +227,7 @@
   <div class="related">
     
       <div class="item1"><a href="/denshouhi/">
-              <img src='https://dpnote.netlify.app/images/denshouhi.png'>
+              <img src='https://dpnote.netlify.app/images/post/denshouhi.png'>
           </a>
 
         <a href="/denshouhi/">自然災害伝承碑マップを作成しました。</a>
